# pandas-downcast

./: .coveragerc  .gitignore  .travis.yml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  test-requirements.txt  tox.ini
.github/workflows/: lint-and-test.yml
pdcast/: __init__.py  core.py  transformer.py  types.py
tests/: conftest.py  test_pdcast.py  test_pdcast_old.py
