[tool.poetry]
name = "pandas-downcast"
version = "0.1.0.dev1"
description = "Automated downcasting for Pandas DataFrames."
authors = ["Dominic Thorn <dominic.thorn@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/domvwt/pandas-downcast"
classifiers = [
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Intended Audience :: Developers",
]
packages = [
    {include = "pdcast"}
]

[tool.poetry.dependencies]
python = ">=3.6.1,<4"
pandas = ">=0.24"
numpy = [
    {version = ">=1.16.5", python = "<3.7"},
    {version = ">=1.17", python = ">=3.7"}
]

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.2.2"
coverage = "^5.5"
mypy = "^0.812"
tox = "^3.23.0"
flake8 = "^3.9.0"
isort = "^5.8.0"
pyment = "^0.3.3"
pylint = "^2.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
