[tool.poetry]
name = "pandas-downcast"
version = "1.2.3"
description = "Shrink Pandas DataFrames with precision safe schema inference."
authors = ["Dominic Thorn <dominic.thorn@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/domvwt/pandas-downcast"
classifiers = [
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Intended Audience :: Developers",
]

packages = [
    {include = "pdcast"}
]

[tool.poetry.dependencies]
python = ">=3.6.1,<4"
pandas = ">=0.24"
numpy = [
    {version = ">=1.16.5", python = "<3.7"},
    {version = ">=1.17", python = ">=3.7"}
]
dataclasses = {version = "*", python = "<3.7"}
typing-extensions = {version = "*", python = "<3.8"}

[tool.poetry.dev-dependencies]
black = {version = ">=20.10", python = ">=3.6.2"}
pytest = "^6.2.2"
coverage = "^5.5"
mypy = "^0.812"
tox = "^3.23.0"
flake8 = "^3.9.0"
isort = "^5.8.0"
pylint = "^2.8.3"
pandas-stubs = {version = "^1.5.0", python = ">=3.8,<3.11"}
importlib-metadata = "<5"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
